Refactor deployment script in main.yml
Removed unnecessary deployment commands and added file search.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,5 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            cd ~
-            git pull origin main
-            composer install --no-dev --optimize-autoloader
-            php artisan migrate --force
-            php artisan config:cache
+            find /home -name "artisan" 2>/dev/null
+            ls -la /home/ubuntu
