--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,5 +42,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            find /home -name "artisan" 2>/dev/null
-            ls -la /home/ubuntu
+                cd /home/ubuntu
+                ls -la
+                find . -name "artisan" -type f 2>/dev/null
+                find . -name "composer.json" -type f 2>/dev/null
+                pwd
