--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,9 @@ jobs:
           key: ${{ secrets.KEY }}
           script: |
             cd /var/www/ServerSide-Ats
-            git pull origin main
+            sudo git config --global --add safe.directory /var/www/ServerSide-Ats
+            sudo git reset --hard
+            sudo git pull origin main
             composer install --no-dev --optimize-autoloader
             php artisan migrate --force
             php artisan config:cache
