--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,13 +43,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-              cd /var/www/ServerSide-Ats
-              git remote set-url origin git@github.com:Omarmhmdd/ServerSide-Ats.git
-              git pull origin main
-              composer install --no-dev --optimize-autoloader --no-interaction
-              php artisan migrate --force
-              php artisan config:cache
-              php artisan route:cache
-              php artisan view:cache
-              sudo chown -R www-data:www-data storage bootstrap/cache
-              sudo chmod -R 775 storage bootstrap/cache
+            cd /var/www/ServerSide-Ats
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+            git remote set-url origin git@github.com:Omarmhmdd/ServerSide-Ats.git
+            git pull origin main
+            composer install --no-dev --optimize-autoloader --no-interaction
+            sudo chown -R www-data:www-data storage bootstrap/cache
+            sudo chmod -R 775 storage bootstrap/cache
+            php artisan migrate --force
+            php artisan config:cache
+  php artisan route:cache
+  php artisan view:cachecache
