--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,13 +42,14 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-            cd /var/www/ServerSide-Ats
-            sudo chown -R ubuntu:ubuntu .
-            git pull origin main
-            composer install --no-dev --optimize-autoloader --no-interaction
-            sudo chown -R www-data:www-data storage bootstrap/cache
-            sudo chmod -R 775 storage bootstrap/cache
-            php artisan migrate --force
-            php artisan config:cache
-            php artisan route:cache
-            php artisan view:cache
+              cd /var/www/ServerSide-Ats
+               git pull origin main
+               composer install --no-dev --optimize-autoloader --no-interaction
+               sudo chown -R ubuntu:www-data storage bootstrap/cache
+               sudo chmod -R 775 storage bootstrap/cache
+               sudo chown -R ubuntu:ubuntu .
+               php artisan optimize:clear
+               php artisan migrate --force
+               php artisan config:cache
+               php artisan route:cache
+               php artisan view:cache
