--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,34 +11,43 @@ jobs:
       mysql:
         image: mysql:8.0
         env:
-          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_ROOT_PASSWORD: root
           MYSQL_DATABASE: ats_system_test
         ports:
           - 3306:3306
         options: >-
-          --health-cmd="mysqladmin ping --silent"
+          --health-cmd="mysqladmin ping -h localhost -uroot -proot"
           --health-interval=10s
           --health-timeout=5s
-          --health-retries=3
+          --health-retries=5
+
     steps:
-      - name: Checkout code 
+      - name: Checkout code
         uses: actions/checkout@v6.0.1
+
       - name: Install PHP
         uses: shivammathur/setup-php@2.36.0
-        with: 
+        with:
           php-version: 8.4.1
+
       - name: Install Composer
+        run: composer install --no-interaction --no-progress --optimize-autoloader
+
+      - name: Prepare Laravel
         run: |
-            composer install --no-interaction --no-progress --optimize-autoloader
-      - name: Prepare Laravel 
-        run: |
-            cp .env.example .env
-            php artisan key:generate
-            php artisan config:cache
-            php artisan config:clear
-        
+          cp .env.example .env
+          php artisan key:generate
+          php artisan config:clear
+
       - name: Run Tests
-        run: php artisan test 
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: 127.0.0.1
+          DB_PORT: 3306
+          DB_DATABASE: ats_system_test
+          DB_USERNAME: root
+          DB_PASSWORD: root
+        run: php artisan test
   cd: 
      runs-on: ubuntu-latest
      needs: ci
