--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,48 +6,50 @@ on:
     branches: [main]
 jobs: 
   ci:
-    runs-on: ubuntu-latest
-    services:
-      mysql:
-        image: mysql:8.0
-        env:
-          MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: ats_system_test
-        ports:
-          - 3306:3306
-        options: >-
-          --health-cmd="mysqladmin ping -h localhost -uroot -proot"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6.0.1
-
-      - name: Install PHP
-        uses: shivammathur/setup-php@2.36.0
-        with:
-          php-version: 8.4.1
-
-      - name: Install Composer
-        run: composer install --no-interaction --no-progress --optimize-autoloader
-
-      - name: Prepare Laravel
-        run: |
-          cp .env.example .env
-          php artisan key:generate
-          php artisan config:clear
-
-      - name: Run Tests
-        env:
-          DB_CONNECTION: mysql
-          DB_HOST: 127.0.0.1
-          DB_PORT: 3306
-          DB_DATABASE: ats_system_test
-          DB_USERNAME: root
-          DB_PASSWORD: root
-        run: php artisan test
+      runs-on: ubuntu-latest
+      services:
+        mysql:
+          image: mysql:8.0
+          env:
+            MYSQL_ROOT_PASSWORD: root
+            MYSQL_DATABASE: ats_system_test
+          ports:
+            - 3306:3306
+          options: >-
+            --health-cmd="mysqladmin ping -h localhost -uroot -proot"
+            --health-interval=10s
+            --health-timeout=5s
+            --health-retries=5
+  
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v6.0.1
+  
+        - name: Install PHP
+          uses: shivammathur/setup-php@2.36.0
+          with:
+            php-version: 8.4.1
+  
+        - name: Install Composer
+          run: composer install --no-interaction --no-progress --optimize-autoloader
+  
+        - name: Prepare Laravel
+          run: |
+            cp .env.example .env
+            php artisan key:generate
+            php artisan config:clear
+  
+        - name: Run Tests
+          env:
+            APP_ENV: testing
+            DB_CONNECTION: mysql
+            DB_HOST: 127.0.0.1
+            DB_PORT: 3306
+            DB_DATABASE: ats_system_test
+            DB_USERNAME: root
+            DB_PASSWORD: root
+            JWT_SECRET: testing_secret_1234567890
+          run: php artisan test
   cd: 
      runs-on: ubuntu-latest
      needs: ci
